--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 <app-first-componet></app-first-componet>
 <app-parent-data [name]= "userName" [userData]="userData"></app-parent-data>
 <app-directives></app-directives>
-<app-id-render [nameIf]= "userName"></app-id-render>
+<app-if-render [nameIf]= "userName"></app-if-render>
 <app-eventos></app-eventos>
 <app-emitter></app-emitter>
 <app-list-render></app-list-render>
